--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
-server.port=9991
+server.port=8881
+#---JPA---
+spring.jpa.database=oracle
 
+#--ììì íì´ë¸ ì­ì  í ìì± : create
+#--ì¢ë£ì íì´ë¸ ì­ì  : create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+#--SQLêµ¬ë¬¸ë³´ì¬ì£¼ê¸°
+spring.jpa.show-sql=true
+#--SQLì ìëì¤ë°ê¿
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.root=info
+logging.level.org.hibernate=info
+logging.level.jdbc.resultsettable=info
